# cmpe460report

./: README.md  ablation.ipynb  experiment_results.txt  main.ipynb  pyproject.toml
saved_models/: FastKAN_FashionMNIST_checkpoint.pth  FastKAN_MNIST_checkpoint.pth  KAN_FashionMNIST_checkpoint.pth  KAN_MNIST_checkpoint.pth  MLP_FashionMNIST_checkpoint.pth  MLP_MNIST_checkpoint.pth
