[tool.poetry]
name = "cmpe460research"
version = "0.1.0"
description = "Course"
authors = ["atakang7"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = "^1.26.0"
torch = "^2.9.0"
torchvision = "^0.24.0"
matplotlib = "^3.10.7"
scikit-learn = "^1.7.2"
pandas = "^2.3.3"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

